syntax = "proto3";
package message;
option go_package = "./;message";

enum MessageID {

    MSG_BEGIN                        = 0;

    //============================================================================================
    //                 一般消息定义
    //============================================================================================
//    MSG_NORMAL_MSGID_BEGIN           = 100000;
//
//    MSG_CHECK_VERSION_REQ            = 100001;    //版本验证
//    MSG_CHECK_VERSION_ACK            = 100002;    //版本验证返回
//
}

